2012-03-14  Richard Guenther  <rguenther@suse.de>

PR middle-end/52578
	* fold-const.c (fold_unary_loc): Fold (T1)(T2)x to (T1)x if
	the outermost conversion is a sign-change only.
	(fold_binary_loc): Disregard widening and sign-changing
	conversions when we determine if two variables are equal
	for reassociation.
	* tree-ssa-forwprop.c (combine_conversions): Fold (T1)(T2)x to
	(T1)x if the outermost conversion is a sign-change only.

	* gcc.dg/pr52578.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@185378 138bc75d-0d04-0410-961f-82ee72b054a4